# reverseverb

./: .gitgnore  CMakeLists.txt  PLUGIN_CODE_GUIDE.md  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
